# aiolifx2

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
src/aiolifx/: unpack.py
src/aiolifx/models/: message.py  message_types.py  product.py
src/aiolifx/resources/: const.py  message.py  message_types.py  products_defs.py
tests/: data.py  datagrams.txt  test_packets.py
